# bilibili-cli

./: README.md  SCHEMA.md  SKILL.md  pyproject.toml
.github/workflows/: ci.yml  publish-clawhub.yml  publish.yml
bili_cli/: __init__.py  auth.py  cli.py  client.py  formatter.py
bili_cli/commands/: account.py  audio.py  collections.py  common.py  interactions.py  user_search.py
tests/: test_audio.py  test_auth.py  test_cli.py  test_client.py
